Start implementing WebRTC

--- a/matchmaker/Cargo.toml
+++ b/matchmaker/Cargo.toml
@@ -18,6 +18,7 @@ actix-web-actors = "4.1.0"
 anyhow = "1.0.62"
 argon2 = "0.4.1"
 base64 = "0.13.0"
+client = { path = "../client" }
 diesel = { version = "2.0.0-rc.1", features = ["r2d2", "uuid", "postgres"] }
 diesel_migrations = "2.0.0-rc.1"
 dotenv = "0.15.0"
@@ -25,6 +26,7 @@ futures-util = { version = "0.3.23", features = ["sink"] }
 rand = "0.8.5"
 secrecy = { version = "0.8.0", features = ["serde"] }
 serde = { version = "1.0.143", features = ["derive"] }
+serde_json = "1.0.85"
 thiserror = "1.0.32"
 tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
 tracing = "0.1.36"
