--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -19,6 +19,7 @@ anyhow = "1.0.62"
 awc = "3.0.0"
 base64 = "0.13.0"
 futures-util = { version = "0.3.23", features = ["sink"] }
+getset = "0.1.2"
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
 tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
