--- a/matchmaker/Cargo.toml
+++ b/matchmaker/Cargo.toml
@@ -18,7 +18,7 @@ actix-web-actors = "4.1.0"
 anyhow = "1.0.62"
 argon2 = "0.4.1"
 base64 = "0.13.0"
-client = { path = "../client" }
+webrtc_socket = { path = "../webrtc_socket" }
 diesel = { version = "2.0.0", features = ["r2d2", "uuid", "postgres"] }
 diesel_migrations = "2.0.0"
 dotenv = "0.15.0"
@@ -35,6 +35,6 @@ url = "2.2.2"
 uuid = { version = "1.1.2", features = ["serde", "v4"] }
 
 [dev-dependencies]
-client = { path = "../client" }
+webrtc_socket = { path = "../webrtc_socket" }
 once_cell = "1.13.1"
 reqwest = { version = "0.11.11", features = ["json", "cookies", "rustls-tls"] }
