--- a/webrtc_socket/Cargo.toml
+++ b/webrtc_socket/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "client"
+name = "webrtc_socket"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,18 +8,17 @@ edition = "2021"
 [lib]
 path = "src/lib.rs"
 
-[[bin]]
-path = "src/main.rs"
-name = "client"
-
 [dependencies]
 actix-codec = "0.5.0"
 actix-web = "4.1.0"
 anyhow = "1.0.62"
 awc = "3.0.0"
 base64 = "0.13.0"
+bincode = "1.3.3"
+bytes = "1.2.1"
 futures-util = { version = "0.3.23", features = ["sink"] }
 getset = "0.1.2"
+ggrs = "0.9.2"
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
 tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
