--- a/matchmaker/Cargo.toml
+++ b/matchmaker/Cargo.toml
@@ -33,6 +33,8 @@ tracing = "0.1.36"
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"]}
 url = "2.2.2"
 uuid = { version = "1.1.2", features = ["serde", "v4"] }
+features = "0.10.0"
+derive = "1.0.0"
 
 [dev-dependencies]
 webrtc_socket = { path = "../webrtc_socket" }
