--- a/webrtc_socket/Cargo.toml
+++ b/webrtc_socket/Cargo.toml
@@ -19,6 +19,7 @@ bytes = "1.2.1"
 futures-util = { version = "0.3.23", features = ["sink"] }
 getset = "0.1.2"
 ggrs = "0.9.2"
+secrecy = "0.8.0"
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
 tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
