--- a/webrtc_socket/Cargo.toml
+++ b/webrtc_socket/Cargo.toml
@@ -11,18 +11,18 @@ path = "src/lib.rs"
 [dependencies]
 actix-codec = "0.5.0"
 actix-rt = "2.7.0"
-anyhow = "1.0.63"
+anyhow = "1.0.64"
 awc = "3.0.1"
 bincode = "1.3.3"
 bytes = "1.2.1"
 futures-util = { version = "0.3.24", features = ["sink"] }
 getset = "0.1.2"
-ggrs = { path = "../../ggrs" }
+ggrs = "0.9.2"
 secrecy = "0.8.0"
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
-tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
 tracing = "0.1.36"
 tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
 uuid = { version = "1.1.2", features = ["serde"] }
-webrtc = "0.4.0"
+webrtc = "0.5.0"
